[metadata]
name = mistral-lib
summary = Mistral shared routings and utilities (Actions API, YAQL functions API, data types etc.)
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/mistral/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    mistral_lib

[compile_catalog]
directory = mistral-lib/locale
domain = mistral-lib

[update_catalog]
domain = mistral-lib
output_dir = mistral-lib/locale
input_file = mistral-lib/locale/mistral-lib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mistral-lib/locale/mistral-lib.pot

